# compare_observability

./: .dockerignore  .env.example  .gitignore  ARIZE_LANGSMITH_FIX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  TROUBLESHOOTING.md  app.py  docker-compose.yml  pyproject.toml  quick_start.py  reproduce_issue.py  run_scenarios.py  test_providers.py  verify_capability_detector.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: IMPROVEMENTS.md  SUMMARY.md  SUMMARY_RU.md  TESTING_CHECKLIST.md  TESTING_PLAN.md
scenarios/: __init__.py  discovery.py  runner.py  scenarios.py
src/: __init__.py  config.py  logger.py  models.py  style.css
src/evaluations/: __init__.py  benchmark.py  capability_detector.py  comparison_matrix.py  cost.py  ragas_eval.py
src/observability/: __init__.py  base.py  manager.py
src/observability/providers/: __init__.py  agentops.py  arize.py  braintrust.py  evidently.py  helicone.py  honeycomb.py  laminar.py  langfuse.py  langsmith.py  logfire.py  opik.py  weave.py
src/pipeline/: __init__.py  generator.py  graph_extractor.py  ingestion.py  orchestrator.py  query_analyzer.py  reasoning.py  reranker.py  retriever.py  tools.py  traced_orchestrator.py
src/utils/: sample_data.py
tests/: __init__.py  test_pipeline.py
